--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-fastapi
+fastapi~=0.115.12
 pydantic<2.0
 uvicorn
 psycopg2-binary
-alembic
-python-dotenv
+alembic~=1.16.1
+python-dotenv~=1.1.0
 fastapi-crudrouter
-passlib[bcrypt]
-python-jose
+passlib[bcrypt]~=1.7.4
+python-jose~=3.4.0
 python-multipart
+
+SQLAlchemy~=2.0.41
+requests~=2.32.3
