--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-fastapi~=0.115.12
+fastapi
 pydantic<2.0
 uvicorn
 psycopg2-binary
-alembic~=1.16.1
-python-dotenv~=1.1.0
+alembic
+python-dotenv
 fastapi-crudrouter
-passlib[bcrypt]~=1.7.4
-python-jose~=3.4.0
+passlib[bcrypt]
+python-jose
 python-multipart
 
-SQLAlchemy~=2.0.41
-requests~=2.32.3
-pytest~=8.3.5
+SQLAlchemy
+requests
+pytest
 httpx
