--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,4 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          DATABASE_HOST: postgres
