--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-          DATABASE_HOST: postgres
+          DATABASE_HOST: ${{ secrets.POSTGRES_HOST }}
         ports:
           - 5432:5432
         options: >-
@@ -45,6 +45,20 @@ jobs:
       - name: Set PYTHONPATH
         run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
 
+      - name: Run application
+        env:
+          REFRESH_TOKEN_EXPIRE_DAYS: ${{ secrets.REFRESH_TOKEN_EXPIRE_DAYS }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          ALGORITHM: ${{ secrets.ALGORITHM }}
+          DB_ADMIN: ${{ secrets.DB_ADMIN }}
+          ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          DATABASE_HOST: ${{ secrets.POSTGRES_HOST }}
+        run: |
+          uvicorn src.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
+
       - name: Test with pytest
         run: pytest -v
         env:
@@ -56,4 +70,4 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          DATABASE_HOST: postgres
+          DATABASE_HOST: ${{ secrets.POSTGRES_HOST }}
